--- a/assets/css/src/global/_vars.scss
+++ b/assets/css/src/global/_vars.scss
@@ -23,7 +23,16 @@ $colors: (
   border-button-hover: #ccc #bbb #aaa,
   border-button-focus: #aaa #bbb #bbb,
   border-input: #ccc,
-  border-abbr: #666
+  border-abbr: #666,
+  
+  twitter: #25a7df,
+  facebook: #4d67a3,
+  instagram: #40719a,
+  pinterest: #c62325,
+  youtube: #cc171e,
+  
+  white: #fff,
+  black: #000
 );
 
 /* frameworks */
