--- a/assets/css/src/layout/site.scss
+++ b/assets/css/src/layout/site.scss
@@ -31,7 +31,7 @@
     
     width: 100%;
     
-    outline: 1px solid red;
+    //outline: 1px solid red;
     
     
     @include media( $third-break ) {
