--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 * License: GNU General Public License v2.0
 * License URI: http://www.gnu.org/licenses/gpl-2.0.html
 * Description: A custom theme for Hoopsworthy
-* Version: 0.1.0
+* Version: 0.1.1
+* GitHub Theme URI: https://github.com/oknoway/hoopsworthy
 * Text Domain: hoopsworthy
 * Tags:
 */
