--- a/assets/css/src/base/font-face.scss
+++ b/assets/css/src/base/font-face.scss
@@ -1,3 +1,22 @@
 /**
  * Font Face
  */
+
+@mixin TradeGothicBC18 {
+  font-weight: 500;
+  font-family: sans-serif;
+  font-style: normal;
+}
+
+@mixin TradeGothicBC20 {
+  font-weight: 600;
+  font-family: sans-serif;
+  font-style: normal;
+  
+}
+
+@mixin TradeGothicLtReg {
+  font-weight: 300;
+  font-family: sans-serif;
+  font-style: normal;
+}
