--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /**
 * Theme Name: hoopsworthy
 * Theme URI: http://www.hoopsworthy.com
-* Author: Automattic
+* Author: Nate Beodrtha @ OK/No Way
 * Author URI: http://oknoway.com
 * License: GNU General Public License v2.0
 * License URI: http://www.gnu.org/licenses/gpl-2.0.html
 * Description: A custom theme for Hoopsworthy
-* Version: 0.1.2
+* Version: 0.1.3
 * GitHub Theme URI: https://github.com/oknoway/hoopsworthy
 * Text Domain: hoopsworthy
 * Tags:
