--- a/assets/css/src/layout/header.scss
+++ b/assets/css/src/layout/header.scss
@@ -4,7 +4,7 @@
 
 .site-header {
   
-  background-color: color( white );
+  background-color: color( black );
   text-align: center;
   
   .site-branding {
