--- a/assets/css/src/layout/navigation.scss
+++ b/assets/css/src/layout/navigation.scss
@@ -3,8 +3,9 @@
  */
 
 .site-navigation {
+  @extend %h4;
+  
   @include no-list;
-  @include TradeGothicBC20;
   
   background-image: linear-gradient(to top, #850101 0%, #970011 99%, #970011 100%);
   box-shadow: 0.4px 7px 11.8px 2.2px rgba(0, 0, 0, 0.19);
@@ -14,6 +15,7 @@
   @include media( $third-break ) {
     
     height: 65px;
+    
   }
   
   .container {
