--- a/assets/css/src/base/_base.scss
+++ b/assets/css/src/base/_base.scss
@@ -7,6 +7,8 @@
 @import "forms";
 @import "copy";
 @import "content-area";
+@import "credits";
+@import "newsletter";
 
 html {
   box-sizing: border-box;
