--- a/assets/css/src/layout/navigation.scss
+++ b/assets/css/src/layout/navigation.scss
@@ -41,10 +41,6 @@
 }
 
 .navigation-menu {
-  @include flex-fill;
-
-  background-image: linear-gradient(to top, #c00 0%, #e50303 100%);
-  
   .menu {
     
     @include no-list;
@@ -67,13 +63,35 @@
     display: block;
     text-decoration: none;
     text-align: center;
-    
-    color: color( white );
+    text-transform: uppercase;
   }
+  
+}
+
+.site-header .navigation-menu {
+  @include flex-fill;
+
+  background-image: linear-gradient(to top, #c00 0%, #e50303 100%);
+  
+  
+  a { color: color( white ); }
 
   .current_page_item > a,
   .current-menu-item > a,
   .current_page_ancestor > a { }
+}
+
+
+.site-footer .navigation-menu {
+  .menu {
+    justify-content: center;
+    
+    .menu-item { flex: 0 1 auto; }
+  }
+  
+  a {
+    @include pad( 1em 1em 0);
+  }
 }
 
 /* Small menu. */
