--- a/assets/css/src/layout/header.scss
+++ b/assets/css/src/layout/header.scss
@@ -15,13 +15,22 @@
     
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: flex-end;
     
-    max-height: 234px;
+    @include media( $third-break ) {
+      flex-wrap: nowrap;
+      align-items: flex-end;
+      
+      max-height: 234px;
+    }
     
     > a {
-      flex: 1 1 auto;
+      flex: 1 1 100%;
+      
+      @include media( $third-break ) {
+        flex: 1 1 auto;
+      }
     }
   }
   
@@ -42,18 +51,34 @@
   }
   
   .site-description {
-    flex: 0 1 auto;
+    flex: 1 1 100%;
+    
+    margin-top: 0;
+    margin-bottom: 0.5em;
     
     font-size: 10px;
     line-height: 1.5;
-    text-align: left;
+    text-align: center;
+    
+    @include media( $third-break ) {
+      flex: 0 1 auto;
+      
+      text-align: left;
+    }
     
     span {
-      display: block;
+      display: inline-block;
       
       text-transform: uppercase;
+      
+    
+      @include media( $third-break ) {
+        display: block;
+      }
     }
   }
+  
+  .site-navigation { position: relative; }
   
   .widget { margin-bottom: 0; }
 }
