--- a/assets/css/src/base/credits.scss
+++ b/assets/css/src/base/credits.scss
@@ -7,7 +7,8 @@
   
   a {
     display: inline-block;
-    min-width: 170px;
+    width: 100%;
+    margin-bottom: 2em;
     padding-top: 185px;
     
     background-image: url(#{$img}/logo_hof.png);
@@ -16,6 +17,12 @@
     
     text-transform: lowercase;
     text-align: center;
+    
+    @include media( $third-break ) {
+      width: auto;
+      min-width: 170px;
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -23,6 +30,12 @@
   
   font-size: 12px;
   text-transform: uppercase;
+  text-align: center;
+  
+  
+  @include media( $third-break ) {
+    text-align: left;
+  }
   
   .icon-nike {
     display: inline-block;
