--- a/assets/css/src/layout/footer.scss
+++ b/assets/css/src/layout/footer.scss
@@ -10,9 +10,6 @@
   background-color: rgba( color( black ), 0.79 );
   color: color( white );
   
-  font-size: 14px;
-  line-height: 1.1;
-  
   .container {
     display: flex;
     flex-direction: row;
@@ -26,8 +23,18 @@
     }
     
     > * {
-      flex: 0 1 auto;
+      flex: 1 1 100%;
+      
+      font-size: 14px;
+      line-height: 1.1;
+      
+      
+      @include media( $third-break ) {
+        flex: 0 1 auto;
+      }
     }
+    
+    
     
     .footer-navigation {
       flex: 1 1 auto;
@@ -41,12 +48,16 @@
   }
   
   .copyright {
-    display: inline-block;
-    
+    display: block;
+    margin-bottom: 4em;
     font-size: 12px;
+    text-align: center;
     
     @include media( $third-break ) {
+      display: inline-block;
       margin-bottom: 75px;
+      
+      text-align: left;
     }
   }
 }
