--- a/assets/css/src/layout/widgets.scss
+++ b/assets/css/src/layout/widgets.scss
@@ -15,3 +15,20 @@
 .widget_search .search-submit {
   display: none;
 }
+
+/* Twitter Timeline widget. */
+.widget_twitter_timeline {
+  
+  .widget-title {
+    @extend %h1;
+    
+    margin: 0;
+    padding: 0.25em 0.5em;
+    
+    background-color: color( red );
+    color: color( white );
+    
+    line-height: 1;
+    text-transform: uppercase;
+  }
+}
