--- a/assets/css/src/layout/archive.scss
+++ b/assets/css/src/layout/archive.scss
@@ -35,6 +35,12 @@
         
           //width: flex-grid( 9, 12 );
           height: auto;
+          
+          .entry-content {
+            .fluid-width-video-wrapper {
+              position: static !important;
+            }
+          }
         }
       
         &.format-image {
@@ -46,7 +52,7 @@
         &:nth-of-type( 6 ) {
           @include span-columns( 12 );
         
-          max-height: 675px;
+          height: 675px;
         }
       
         &:nth-of-type( 2 ),
@@ -153,6 +159,23 @@
         color: color( white );
         
         line-height: 1.1;
+        
+        &:before {
+          content: '';
+          
+          position: absolute;
+          bottom: -9px;
+          left: 0;
+          z-index: 3;
+          display: block;
+          width: 18px;
+          height: 9px;
+          
+          //background-image: linear-gradient(189deg, #b20101 0%, #e60303 100%);
+          background-image: url(#{$img}/cut_back.svg);
+          background-repeat: no-repeat;
+          background-size: 100%;
+        }
       }
     }
     
