--- a/assets/css/src/layout/singular.scss
+++ b/assets/css/src/layout/singular.scss
@@ -64,6 +64,8 @@
     .entry-header {
       order: 2;
       
+      padding: 0 flex-gutter();
+      
       .entry-title,
       .entry-subhead {
         margin: 0.15em 0;
@@ -73,7 +75,7 @@
     .entry-media {
       order: 1;
       
-      height: 450px;
+      //height: 450px;
       
       .hero {
         height: 100%;
@@ -84,6 +86,7 @@
     .entry-content {
       order: 3;
       
+      padding: 0 flex-gutter();
     }
     
     .entry-footer {
@@ -105,6 +108,24 @@
         
         line-height: 1.1;
         text-decoration: none;
+        
+        &:before {
+          
+          content: '';
+          
+          position: absolute;
+          bottom: -9px;
+          left: 0;
+          z-index: 3;
+          display: block;
+          width: 18px;
+          height: 9px;
+          
+          //background-image: linear-gradient(189deg, #b20101 0%, #e60303 100%);
+          background-image: url(#{$img}/cut_back.svg);
+          background-repeat: no-repeat;
+          background-size: 100%;
+        }
       }
     }
   }
