--- a/assets/css/src/components/social.scss
+++ b/assets/css/src/components/social.scss
@@ -6,11 +6,29 @@
   
   @include flex-fill;
   
+  position: relative;
+  
   padding-right: 2%;
-  padding-left: 2%;
+  padding-left: 0;
   
   background-color: color( black );
   background-image: linear-gradient(to right, black 0%, #1d1d1d 100%);
+
+  &:before {
+    content: '';
+    
+    position: absolute;
+    left: -21px;
+    
+    display: block;
+    height: 100%;
+    width: 22px;
+    
+    background-image: url(#{$img}/search_before.svg);
+    background-position: 0;
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
 
   ul {
     @include flex-fill;
