--- a/assets/css/src/layout/navigation.scss
+++ b/assets/css/src/layout/navigation.scss
@@ -6,7 +6,7 @@
   
   @include no-list;
   
-  background-image: linear-gradient(to top, #850101 0%, #970011 99%, #970011 100%);
+  background-image: linear-gradient( to right, transparent 50%, #1d1d1d 51%, #1d1d1d 100%), linear-gradient(to top, #850101 0%, #970011 99%, #970011 100%);
   box-shadow: 0.4px 7px 11.8px 2.2px rgba(0, 0, 0, 0.19);
   
   text-transform: uppercase;
@@ -16,6 +16,7 @@
     height: 65px;
     
   }
+  
   
   .container {
     display: flex;
@@ -47,7 +48,6 @@
 
 .navigation-menu {
   @extend %h4;
-  
   
   .menu {
     
@@ -86,7 +86,23 @@
 .site-header .navigation-menu {
   @include flex-fill;
 
+  position: relative;
+
   background-image: linear-gradient(to top, #c00 0%, #e50303 100%);
+  
+  &:before {
+    content: '';
+    
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 22px;
+    
+    background-image: url(#{$img}/nav_before.svg);
+    background-position: 100% -1px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   
   
   a { color: color( white ); }
