--- a/assets/css/src/base/_base.scss
+++ b/assets/css/src/base/_base.scss
@@ -65,6 +65,13 @@ img {
   height: auto; /* Make sure images are scaled correctly. */
 }
 
+svg {
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 100%;
+}
+
 table {
   margin: 0 0 1.5em;
   width: 100%;
