--- a/assets/css/src/layout/header.scss
+++ b/assets/css/src/layout/header.scss
@@ -23,6 +23,8 @@
       align-items: flex-end;
       
       max-height: 234px;
+      padding-right: $half-gutter;
+      padding-left: $half-gutter;
     }
     
     > a {
@@ -37,8 +39,8 @@
   .hoopsworthy-logo {
     position: relative;
     display: block;
-    height: calc( 100% -35px );
     max-height: 234px;
+    line-height: 0;
     
     > * {
     }
@@ -53,8 +55,8 @@
   .site-description {
     flex: 1 1 100%;
     
-    margin-top: 0;
-    margin-bottom: 0.5em;
+    margin-top: 1em;
+    margin-bottom: 1em;
     
     font-size: 10px;
     line-height: 1.5;
@@ -63,6 +65,9 @@
     @include media( $third-break ) {
       flex: 0 1 auto;
       
+      margin-top: 0;
+      margin-bottom: 0.5em;
+      
       text-align: left;
     }
     
@@ -70,8 +75,17 @@
       display: inline-block;
       
       text-transform: uppercase;
+      line-height: 1.15;
       
     
+      @include media( $third-break ) {
+        display: block;
+      }
+    }
+    
+    br {
+      display: none;
+      
       @include media( $third-break ) {
         display: block;
       }
