--- a/assets/css/src/layout/singular.scss
+++ b/assets/css/src/layout/singular.scss
@@ -10,13 +10,17 @@
     
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: stretch;
     
     margin-top: -2em;
     padding-top: 2em;
     
     background-color: color( white );
+    
+    @include media( $fourth-break ) {
+      flex-wrap: nowrap;
+    }
     
     .content-area {
       flex: 1 0 100%;
@@ -31,9 +35,10 @@
     }
     
     .widget-area {
-      display: none;
+      flex: 1 0 100%;
+      width: 100%;
       
-      @include media( $third-break ) {
+      @include media( $fourth-break ) {
         flex: 1 0 auto;
         
         display: inline-block;
@@ -75,7 +80,7 @@
     .entry-media {
       order: 1;
       
-      //height: 450px;
+      min-height: 450px;
       
       .hero {
         height: 100%;
@@ -87,6 +92,16 @@
       order: 3;
       
       padding: 0 flex-gutter();
+      
+      
+      .storify,
+      iframe {
+        
+        width: 100% !important;
+        max-width: 100% !important;
+        overflow: hidden !important;
+      }
+      
     }
     
     .entry-footer {
