--- a/assets/css/src/layout/singular.scss
+++ b/assets/css/src/layout/singular.scss
@@ -80,7 +80,7 @@
     .entry-media {
       order: 1;
       
-      min-height: 450px;
+      height: 450px;
       
       .hero {
         height: 100%;
