--- a/assets/css/src/components/social.scss
+++ b/assets/css/src/components/social.scss
@@ -5,36 +5,24 @@
 .widget_wpcom_social_media_icons_widget {
   
   @include flex-fill;
+  @include no-list;
   
   position: relative;
   
-  padding-right: 2%;
-  padding-left: 0;
+  padding-left: 2%;
   
-  background-color: color( black );
-  background-image: linear-gradient(to right, black 0%, #1d1d1d 100%);
-
-  &:before {
-    content: '';
-    
-    position: absolute;
-    left: -21px;
-    
-    display: block;
-    height: 100%;
-    width: 22px;
-    
-    background-image: url(#{$img}/search_before.svg);
-    background-position: 0;
-    background-repeat: no-repeat;
-    background-size: 100%;
-  }
 
   ul {
     @include flex-fill;
     
+    margin-bottom: 0.25em;
+    
+    @include media( $third-break ) {
+      flex-direction: column;
+    }
     
     li {
+      flex: 0 1 auto;
       
       @include flex-center;
       
@@ -47,10 +35,22 @@
 
   a {
     display: inline-block;
-    margin-right: 16%;
-    margin-left: 16%;
+    margin-top: 0.25em;
+    margin-bottom: 0.25em;
     
     color: color( white );
+    opacity: 1;
+    
+    @include transition();
+    
+    &:hover {
+      opacity: 0.66;
+    }
+    
+    @include media( $third-break ) {
+      margin-top: 0.25em;
+      margin-bottom: 0.25em;
+    }
   }
   
   .genericon {
