--- a/assets/css/src/layout/archive.scss
+++ b/assets/css/src/layout/archive.scss
@@ -45,7 +45,6 @@
           height: auto;
           max-height: none;
                     
-          &:nth-of-type( 1 ),
           &:nth-of-type( 6 ) {
             height: 675px;
           }
@@ -67,17 +66,16 @@
         &.format-image {
           //width: flex-grid( 6, 12 );
         }
+        
+        
       
-      
-        &:nth-of-type( 1 ),
         &:nth-of-type( 6 ) {
           @include span-columns( 12 );
         
           height: 675px;
         }
-      
-        &:nth-of-type( 2 ),
-        &:nth-of-type( 3 ),
+        
+        &:nth-of-type( 1 ),
         &:nth-of-type( 4 ),
         &:nth-of-type( 5 ) {
           @include span-columns( 6 );
@@ -91,13 +89,28 @@
         &:nth-of-type( 8 ),
         &:nth-of-type( 9 ),
         &:nth-of-type( 10 ) {
-          @include span-columns( 4.5 );
+          @include span-columns( 6 );
         
           height: 450px;
 
           .entry-header { font-size: 75%; }
         }
       
+        &:nth-of-type( 2 ),
+        &:nth-of-type( 3 ) {
+          @include direction-context(right-to-left) {
+            @include media( $third-break ) {
+              @include span-columns( 3 );
+              @include omega();
+              
+              height: 210px;
+              
+              .entry-header { font-size: 50%; }
+            }
+          }
+          
+        }
+        
         &:nth-of-type( 3 ),
         &:nth-of-type( 5 ) {
           @include omega();
@@ -112,7 +125,7 @@
       @include direction-context(right-to-left) {
         @include media( $third-break ) {
           @include span-columns( 3 );
-          @include omega();
+          //@include omega();
         }
       }
     }
@@ -121,13 +134,31 @@
   }
   
   
+  
+}
+
+.archive,
+.related-posts {
+  
   .post {
-    
     
     position: relative;
     
     margin-bottom: $gutter;
     
+    
+    &.format-video {
+      overflow-y: hidden;
+      
+      &:hover,
+      &:focus {
+        
+        .entry-header {
+          transform: translateY( 100% );
+          
+        }
+      }
+    }
     
     .entry-header {
       order: 2;
@@ -136,6 +167,8 @@
       
       background-color: rgba( color( black ), 0.79 );
       color: color( white );
+      
+      @include transition;
       
       @include media( $third-break ) {
         position: absolute;
@@ -153,9 +186,7 @@
       .entry-subhead {
         line-height: 1;
       }
-      
     }
-    
     
     .entry-content {
       order: 1;
@@ -272,5 +303,4 @@
       }
     }
   }
-  
 }
