--- a/assets/css/src/layout/archive.scss
+++ b/assets/css/src/layout/archive.scss
@@ -134,7 +134,46 @@
     
   }
   
-  
+  &.tag {
+    .site-main {
+      
+      > .post {
+        @include media( $third-break ) {
+
+          &:nth-of-type( 1 ) {
+            @include span-columns( 12 );
+        
+            height: 675px;
+          }
+        
+          &:nth-of-type( 2 ),
+          &:nth-of-type( 3 ),
+          &:nth-of-type( 4 ),
+          &:nth-of-type( 5 ),
+          &:nth-of-type( 6 ),
+          &:nth-of-type( 7 ),
+          &:nth-of-type( 8 ),
+          &:nth-of-type( 9 ),
+          &:nth-of-type( 10 ),
+          &:nth-of-type( 11 ) {
+            @include span-columns( 6 );
+        
+            height: 450px;
+
+            .entry-header { font-size: 75%; }
+          }
+
+          &:nth-of-type( 3 ),
+          &:nth-of-type( 5 ),
+          &:nth-of-type( 7 ),
+          &:nth-of-type( 9 ),
+          &:nth-of-type( 11 ) {
+            @include omega();
+          }
+        }
+      }
+    }
+  }
   
 }
 
