--- a/assets/css/src/layout/archive.scss
+++ b/assets/css/src/layout/archive.scss
@@ -168,7 +168,7 @@
         
         .entry-header {
           opacity: 0;
-          
+          pointer-events: none;
         }
       }
     }
