--- a/assets/css/src/layout/singular.scss
+++ b/assets/css/src/layout/singular.scss
@@ -68,13 +68,58 @@
     
     
     .entry-header {
+      //@include clearfix;
+      
       order: 2;
       
       padding: 0 flex-gutter();
       
+      @include media( $third-break ) {
+        
+        
+      }
+      
+      
       .entry-title,
       .entry-subhead {
         margin: 0.15em 0;
+        
+        @include media( $third-break ) {
+          width: flex-grid( 10.5, 12 );
+          float: right;
+        }
+      }
+      
+      .entry-meta {
+        margin-top: 0.5em;
+        
+        font-size: em( 13 );
+        line-height: 1.2;
+        
+        @include media( $third-break ) {
+          width: flex-grid( 2, 12 );
+        }
+        
+        a {
+          color: color( blue );
+          
+          text-decoration: none;
+        }
+
+
+        .post-tags {
+          @include no-list;
+          
+          margin-bottom: 1.5em !important;
+          
+          font-weight: 600;
+        }
+        
+        .byline {
+          
+          .author { display: block; }
+        }
+        
       }
     }
     
@@ -97,8 +142,13 @@
     .entry-content {
       order: 3;
       
+      max-width: 100%;
       padding: 0 flex-gutter();
       
+      
+      @include media( $third-break ) {
+        padding-left: flex-grid( 2, 12 );
+      }
       
       .storify,
       iframe {
@@ -108,6 +158,14 @@
         overflow: hidden !important;
       }
       
+      .aligncenter.size-full {
+        
+        @include media( $third-break ) {
+          width: flex-grid( 14, 12 );
+          max-width: flex-grid( 14, 12 );
+          margin-left: 0 - flex-grid( 2, 12 );
+        }
+      }
     }
     
     .entry-footer {
